sandbox/output
FtsTranslator.java:4: error: missing return statement
    }
    ^
1 error
